[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/config/level.gd" type="Script" id=1]
[ext_resource path="res://src/levels/background.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/levels/simple_tile_map.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/levels/eye.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/levels/mountain.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 8 )

[node name="Level3" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="MountainContainer" type="Node2D" parent="."]

[node name="Mountain" parent="MountainContainer" instance=ExtResource( 5 )]

[node name="SimpleTileMap" parent="." instance=ExtResource( 3 )]
tile_data = PoolIntArray( -1245187, 0, 196609, -1245186, 0, 196610, -1245185, 0, 196610, -1310720, 0, 196610, -1310719, 0, 196610, -1310718, 0, 196611, -983046, 0, 196609, -983045, 0, 196610, -983044, 0, 196611, -1048573, 0, 196609, -1048572, 0, 196610, -1048571, 0, 196611, -720905, 0, 196609, -720904, 0, 196610, -720903, 0, 196611, -786426, 0, 196609, -786425, 0, 196610, -786424, 0, 196611, -458763, 0, 196609, -458762, 0, 196610, -458761, 0, 196611, -524280, 0, 196609, -524279, 0, 196610, -524278, 0, 196611, -196621, 0, 196609, -196620, 0, 196610, -196619, 0, 196611, -196617, 0, 196609, -196616, 0, 196610, -196615, 0, 196611, -262138, 0, 196609, -262137, 0, 196610, -262136, 0, 196611, -262134, 0, 196609, -262133, 0, 196610, -262132, 0, 196611, 65521, 0, 196609, 65522, 0, 196610, 65523, 0, 196611, 65529, 0, 196609, 65530, 0, 196610, 65531, 0, 196611, 4, 0, 196609, 5, 0, 196610, 6, 0, 196611, 12, 0, 196609, 13, 0, 196610, 14, 0, 196611, 327663, 0, 196609, 327664, 0, 196610, 327665, 0, 196611, 327675, 0, 196609, 327676, 0, 196610, 327677, 0, 196611, 262146, 0, 196609, 262147, 0, 196610, 262148, 0, 196611, 262158, 0, 196609, 262159, 0, 196610, 262160, 0, 196611, 589805, 0, 196609, 589806, 0, 196610, 589807, 0, 196611, 589821, 0, 196609, 589822, 0, 196611, 524289, 0, 196609, 524290, 0, 196611, 524304, 0, 196609, 524305, 0, 196610, 524306, 0, 196611, 851947, 0, 196609, 851948, 0, 196610, 851949, 0, 196611, 851963, 0, 196609, 851964, 0, 196610, 851965, 0, 196611, 786434, 0, 196609, 786435, 0, 196610, 786436, 0, 196611, 786450, 0, 196609, 786451, 0, 196610, 786452, 0, 196611, 1114089, 0, 196609, 1114090, 0, 196610, 1114091, 0, 196611, 1114105, 0, 196609, 1114106, 0, 196610, 1114107, 0, 196611, 1048580, 0, 196609, 1048581, 0, 196610, 1048582, 0, 196611, 1048596, 0, 196609, 1048597, 0, 196610, 1048598, 0, 196611, 1376231, 0, 196609, 1376232, 0, 196610, 1376233, 0, 196611, 1376247, 0, 196609, 1376248, 0, 196610, 1376249, 0, 196611, 1310726, 0, 196609, 1310727, 0, 196610, 1310728, 0, 196611, 1310742, 0, 196609, 1310743, 0, 196610, 1310744, 0, 196611, 1638373, 0, 196609, 1638374, 0, 196610, 1638375, 0, 196611, 1638389, 0, 196609, 1638390, 0, 196610, 1638391, 0, 196611, 1572872, 0, 196609, 1572873, 0, 196610, 1572874, 0, 196611, 1572888, 0, 196609, 1572889, 0, 196610, 1572890, 0, 196611, 1900515, 0, 196609, 1900516, 0, 196610, 1900517, 0, 196611, 1900531, 0, 196609, 1900532, 0, 196610, 1900533, 0, 196611, 1835018, 0, 196609, 1835019, 0, 196610, 1835020, 0, 196611, 1835034, 0, 196609, 1835035, 0, 196610, 1835036, 0, 196611, 2162577, 0, 8, 2162578, 0, 10, 2162579, 0, 10, 2162580, 0, 10, 2162581, 0, 10, 2162582, 0, 10, 2162583, 0, 10, 2162584, 0, 10, 2162585, 0, 10, 2162586, 0, 10, 2162587, 0, 10, 2162588, 0, 10, 2162589, 0, 10, 2162590, 0, 10, 2162591, 0, 10, 2162592, 0, 10, 2162593, 0, 10, 2162594, 0, 10, 2162595, 0, 10, 2162596, 0, 10, 2162597, 0, 10, 2162598, 0, 10, 2162599, 0, 10, 2162600, 0, 10, 2162601, 0, 10, 2162602, 0, 10, 2162603, 0, 10, 2162604, 0, 10, 2162605, 0, 10, 2162606, 0, 10, 2162607, 0, 10, 2162608, 0, 10, 2162609, 0, 10, 2162610, 0, 10, 2162611, 0, 10, 2162612, 0, 10, 2162613, 0, 10, 2162614, 0, 10, 2162615, 0, 10, 2162616, 0, 10, 2162617, 0, 10, 2162618, 0, 10, 2162619, 0, 10, 2162620, 0, 10, 2162621, 0, 10, 2162622, 0, 10, 2162623, 0, 10, 2162624, 0, 10, 2162625, 0, 10, 2162626, 0, 10, 2162627, 0, 10, 2162628, 0, 10, 2162629, 0, 10, 2162630, 0, 10, 2162631, 0, 10, 2162632, 0, 10, 2162633, 0, 10, 2162634, 0, 10, 2162635, 0, 10, 2162636, 0, 10, 2162637, 0, 10, 2162638, 0, 10, 2162639, 0, 10, 2162640, 0, 10, 2162641, 0, 10, 2162642, 0, 10, 2162643, 0, 10, 2162644, 0, 10, 2162645, 0, 10, 2162646, 0, 10, 2162647, 0, 10, 2162648, 0, 10, 2162649, 0, 10, 2162650, 0, 10, 2162651, 0, 10, 2162652, 0, 10, 2162653, 0, 10, 2162654, 0, 10, 2162655, 0, 10, 2162656, 0, 10, 2162657, 0, 10, 2162658, 0, 10, 2162659, 0, 10, 2162660, 0, 10, 2162661, 0, 10, 2162662, 0, 10, 2162663, 0, 10, 2162664, 0, 10, 2162665, 0, 10, 2162666, 0, 10, 2162667, 0, 10, 2162668, 0, 10, 2162669, 0, 10, 2162670, 0, 10, 2162671, 0, 10, 2162672, 0, 10, 2162673, 0, 10, 2162674, 0, 10, 2162675, 0, 10, 2162676, 0, 10, 2162677, 0, 10, 2162678, 0, 10, 2162679, 0, 10, 2162680, 0, 10, 2162681, 0, 10, 2162682, 0, 10, 2162683, 0, 10, 2162684, 0, 10, 2162685, 0, 10, 2162686, 0, 10, 2162687, 0, 10, 2097152, 0, 10, 2097153, 0, 10, 2097154, 0, 10, 2097155, 0, 10, 2097156, 0, 10, 2097157, 0, 10, 2097158, 0, 10, 2097159, 0, 10, 2097160, 0, 10, 2097161, 0, 10, 2097162, 0, 10, 2097163, 0, 10, 2097164, 0, 10, 2097165, 0, 10, 2097166, 0, 10, 2097167, 0, 10, 2097168, 0, 10, 2097169, 0, 10, 2097170, 0, 10, 2097171, 0, 10, 2097172, 0, 10, 2097173, 0, 10, 2097174, 0, 10, 2097175, 0, 10, 2097176, 0, 10, 2097177, 0, 10, 2097178, 0, 10, 2097179, 0, 10, 2097180, 0, 10, 2097181, 0, 10, 2097182, 0, 10, 2097183, 0, 10, 2097184, 0, 10, 2097185, 0, 10, 2097186, 0, 10, 2097187, 0, 10, 2097188, 0, 10, 2097189, 0, 10, 2097190, 0, 10, 2097191, 0, 10, 2097192, 0, 10, 2097193, 0, 10, 2097194, 0, 10, 2097195, 0, 10, 2097196, 0, 10, 2097197, 0, 10, 2097198, 0, 10, 2097199, 0, 10, 2097200, 0, 10, 2097201, 0, 10, 2097202, 0, 10, 2097203, 0, 10, 2097204, 0, 10, 2097205, 0, 10, 2097206, 0, 10, 2097207, 0, 10, 2097208, 0, 10, 2097209, 0, 10, 2097210, 0, 10, 2097211, 0, 10, 2097212, 0, 10, 2097213, 0, 10, 2097214, 0, 10, 2097215, 0, 10, 2097216, 0, 10, 2097217, 0, 10, 2097218, 0, 10, 2097219, 0, 10, 2097220, 0, 10, 2097221, 0, 10, 2097222, 0, 10, 2097223, 0, 10, 2097224, 0, 10, 2097225, 0, 10, 2097226, 0, 10, 2097227, 0, 10, 2097228, 0, 10, 2097229, 0, 10, 2097230, 0, 10, 2097231, 0, 10, 2097232, 0, 10, 2097233, 0, 10, 2097234, 0, 10, 2097235, 0, 10, 2097236, 0, 10, 2097237, 0, 10, 2097238, 0, 10, 2097239, 0, 10, 2097240, 0, 10, 2097241, 0, 10, 2097242, 0, 10, 2097243, 0, 10, 2097244, 0, 10, 2097245, 0, 10, 2097246, 0, 10, 2097247, 0, 10, 2097248, 0, 10, 2097249, 0, 10, 2097250, 0, 10, 2097251, 0, 10, 2097252, 0, 10, 2097253, 0, 10, 2097254, 0, 10, 2097255, 0, 10, 2097256, 0, 10, 2097257, 0, 10, 2097258, 0, 10, 2097259, 0, 10, 2097260, 0, 10, 2097261, 0, 10, 2097262, 0, 11, 2228113, 0, 196616, 2228114, 0, 196617, 2228115, 0, 196617, 2228116, 0, 196617, 2228117, 0, 196617, 2228118, 0, 196617, 2228119, 0, 196617, 2228120, 0, 196617, 2228121, 0, 196617, 2228122, 0, 196617, 2228123, 0, 196617, 2228124, 0, 196617, 2228125, 0, 196617, 2228126, 0, 196617, 2228127, 0, 196617, 2228128, 0, 196617, 2228129, 0, 196617, 2228130, 0, 196617, 2228131, 0, 196617, 2228132, 0, 196617, 2228133, 0, 196617, 2228134, 0, 196617, 2228135, 0, 196617, 2228136, 0, 196617, 2228137, 0, 196617, 2228138, 0, 196617, 2228139, 0, 196617, 2228140, 0, 196617, 2228141, 0, 196617, 2228142, 0, 196617, 2228143, 0, 196617, 2228144, 0, 196617, 2228145, 0, 196617, 2228146, 0, 196617, 2228147, 0, 196617, 2228148, 0, 196617, 2228149, 0, 196617, 2228150, 0, 196617, 2228151, 0, 196617, 2228152, 0, 196617, 2228153, 0, 196617, 2228154, 0, 196617, 2228155, 0, 196617, 2228156, 0, 196617, 2228157, 0, 196617, 2228158, 0, 196617, 2228159, 0, 196617, 2228160, 0, 196617, 2228161, 0, 196617, 2228162, 0, 196617, 2228163, 0, 196617, 2228164, 0, 196617, 2228165, 0, 196617, 2228166, 0, 196617, 2228167, 0, 196617, 2228168, 0, 196617, 2228169, 0, 196617, 2228170, 0, 196617, 2228171, 0, 196617, 2228172, 0, 196617, 2228173, 0, 196617, 2228174, 0, 196617, 2228175, 0, 196617, 2228176, 0, 196617, 2228177, 0, 196617, 2228178, 0, 196617, 2228179, 0, 196617, 2228180, 0, 196617, 2228181, 0, 196617, 2228182, 0, 196617, 2228183, 0, 196617, 2228184, 0, 196617, 2228185, 0, 196617, 2228186, 0, 196617, 2228187, 0, 196617, 2228188, 0, 196617, 2228189, 0, 196617, 2228190, 0, 196617, 2228191, 0, 196617, 2228192, 0, 196617, 2228193, 0, 196617, 2228194, 0, 196617, 2228195, 0, 196617, 2228196, 0, 196617, 2228197, 0, 196617, 2228198, 0, 196617, 2228199, 0, 196617, 2228200, 0, 196617, 2228201, 0, 196617, 2228202, 0, 196617, 2228203, 0, 196617, 2228204, 0, 196617, 2228205, 0, 196617, 2228206, 0, 196617, 2228207, 0, 196617, 2228208, 0, 196617, 2228209, 0, 196617, 2228210, 0, 196617, 2228211, 0, 196617, 2228212, 0, 196617, 2228213, 0, 196617, 2228214, 0, 196617, 2228215, 0, 196617, 2228216, 0, 196617, 2228217, 0, 196617, 2228218, 0, 196617, 2228219, 0, 196617, 2228220, 0, 196617, 2228221, 0, 196617, 2228222, 0, 196617, 2228223, 0, 196617, 2162688, 0, 196617, 2162689, 0, 196617, 2162690, 0, 196617, 2162691, 0, 196617, 2162692, 0, 196617, 2162693, 0, 196617, 2162694, 0, 196617, 2162695, 0, 196617, 2162696, 0, 196617, 2162697, 0, 196617, 2162698, 0, 196617, 2162699, 0, 196617, 2162700, 0, 196617, 2162701, 0, 196617, 2162702, 0, 196617, 2162703, 0, 196617, 2162704, 0, 196617, 2162705, 0, 196617, 2162706, 0, 196617, 2162707, 0, 196617, 2162708, 0, 196617, 2162709, 0, 196617, 2162710, 0, 196617, 2162711, 0, 196617, 2162712, 0, 196617, 2162713, 0, 196617, 2162714, 0, 196617, 2162715, 0, 196617, 2162716, 0, 196617, 2162717, 0, 196617, 2162718, 0, 196617, 2162719, 0, 196617, 2162720, 0, 196617, 2162721, 0, 196617, 2162722, 0, 196617, 2162723, 0, 196617, 2162724, 0, 196617, 2162725, 0, 196617, 2162726, 0, 196617, 2162727, 0, 196617, 2162728, 0, 196617, 2162729, 0, 196617, 2162730, 0, 196617, 2162731, 0, 196617, 2162732, 0, 196617, 2162733, 0, 196617, 2162734, 0, 196617, 2162735, 0, 196617, 2162736, 0, 196617, 2162737, 0, 196617, 2162738, 0, 196617, 2162739, 0, 196617, 2162740, 0, 196617, 2162741, 0, 196617, 2162742, 0, 196617, 2162743, 0, 196617, 2162744, 0, 196617, 2162745, 0, 196617, 2162746, 0, 196617, 2162747, 0, 196617, 2162748, 0, 196617, 2162749, 0, 196617, 2162750, 0, 196617, 2162751, 0, 196617, 2162752, 0, 196617, 2162753, 0, 196617, 2162754, 0, 196617, 2162755, 0, 196617, 2162756, 0, 196617, 2162757, 0, 196617, 2162758, 0, 196617, 2162759, 0, 196617, 2162760, 0, 196617, 2162761, 0, 196617, 2162762, 0, 196617, 2162763, 0, 196617, 2162764, 0, 196617, 2162765, 0, 196617, 2162766, 0, 196617, 2162767, 0, 196617, 2162768, 0, 196617, 2162769, 0, 196617, 2162770, 0, 196617, 2162771, 0, 196617, 2162772, 0, 196617, 2162773, 0, 196617, 2162774, 0, 196617, 2162775, 0, 196617, 2162776, 0, 196617, 2162777, 0, 196617, 2162778, 0, 196617, 2162779, 0, 196617, 2162780, 0, 196617, 2162781, 0, 196617, 2162782, 0, 196617, 2162783, 0, 196617, 2162784, 0, 196617, 2162785, 0, 196617, 2162786, 0, 196617, 2162787, 0, 196617, 2162788, 0, 196617, 2162789, 0, 196617, 2162790, 0, 196617, 2162791, 0, 196617, 2162792, 0, 196617, 2162793, 0, 196617, 2162794, 0, 196617, 2162795, 0, 196617, 2162796, 0, 196617, 2162797, 0, 196617, 2162798, 0, 196619 )

[node name="Eye" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -210 )

[node name="Goal" type="Area2D" parent="."]
position = Vector2( 0, -168 )
collision_layer = 32
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal"]
shape = SubResource( 1 )

[node name="LeftSpawnPoint" type="Position2D" parent="."]
position = Vector2( -272, 240 )

[node name="RightSpawnPoint" type="Position2D" parent="."]
position = Vector2( 272, 240 )

[node name="Frame" type="Node2D" parent="."]
z_index = 10

[node name="ColorRect" type="ColorRect" parent="Frame"]
margin_left = -896.0
margin_top = -768.0
margin_right = 896.0
margin_bottom = -256.0
mouse_filter = 2
color = Color( 0.0823529, 0.0745098, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Frame"]
margin_left = -896.0
margin_top = 256.0
margin_right = 896.0
margin_bottom = 768.0
mouse_filter = 2
color = Color( 0.0823529, 0.0745098, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="Frame"]
margin_left = 256.0
margin_top = -320.0
margin_right = 896.0
margin_bottom = 318.0
mouse_filter = 2
color = Color( 0.0823529, 0.0745098, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="Frame"]
margin_left = -896.0
margin_top = -320.0
margin_right = -256.0
margin_bottom = 318.0
mouse_filter = 2
color = Color( 0.0823529, 0.0745098, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Goal" to="." method="_on_Goal_body_entered"]
